[package]
name = "wfst"
version = "0.1.0"
authors = ["Daniel van Niekerk <dvn.demitasse@gmail.com>"]

[dependencies]
rustc-serialize = "*"
bincode = "*"
rand = "*"

[lib]
name = "wfst"
path = "src/wfst.rs"

[[bin]]
name = "main_wfst"
path = "src/main_wfst.rs"

[[bin]]
name = "main_semiring"
path = "src/main_semiring.rs"

[[bin]]
name = "test_semiring"
path = "src/test_semiring.rs"
