[package]
name = "wfst"
version = "0.6.2"
authors = ["Daniel van Niekerk <dvn.demitasse@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/demitasse/wfst"
documentation = "https://docs.rs/wfst"
homepage = "https://github.com/demitasse/wfst"
description = """
This is a port of the n-best strings algorithm:

Mohri, M. and Riley, M. 2002. "An efficient algorithm for the n-best-strings problem," In: Proc. ICSLP.

With a simple implementation of Weighted Finite-State Transducers (WFSTs) as described in:

Mehryar Mohri, Fernando Pereira, and Michael Riley. "The design principles of a weighted finite-state transducer library," In: Theoretical Computer Science vol. 231 issue 1 (2000): pp. 17-32.
"""
keywords = ["wfst", "fst"]

[dependencies]
serde = { version = "^1.0", features = ["derive", "rc"] }
serde_json = "^1.0"
argparse = "^0.2"
bincode = "^1.2"
rand = "^0.7"
linked-hash-map = "^0.5"


[lib]
name = "wfst"
path = "src/wfst.rs"

[[bin]]
name = "main_wfst"
path = "src/main_wfst.rs"

[[bin]]
name = "main_semiring"
path = "src/main_semiring.rs"

[[bin]]
name = "test_semiring"
path = "src/test_semiring.rs"

[[bin]]
name = "wfstcompile"
path = "src/wfstcompile.rs"

[[bin]]
name = "wfstprint"
path = "src/wfstprint.rs"

[[bin]]
name = "example_shortestpath"
path = "src/example_shortestpath.rs"
